form overflow issue fixed

--- a/src/sass/utilities/_utilities.scss
+++ b/src/sass/utilities/_utilities.scss
@@ -7,10 +7,7 @@
     max-width: 80rem;
   }
   @include respond(tab-port) {
-    max-width: 50rem;
-  }
-  @include respond(phone) {
-    max-width: 40rem;
+    width: 80%;
   }
 }
 
@@ -22,10 +19,7 @@
     max-width: 60rem;
   }
   @include respond(tab-port) {
-    max-width: 40rem;
-  }
-  @include respond(phone) {
-    max-width: 40rem;
+    width: 70%;
   }
 }
 
@@ -55,6 +49,9 @@
   }
   @include respond(tab-port) {
     font-size: 3rem;
+  }
+  @include respond(phone) {
+    font-size: 2.5rem;
   }
 }
 
